small bugfixes with login element

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -40,3 +40,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="signup-element/signup-element.html">
 <link rel="import" href="login-element/login-element.html">
+<link rel="import" href="hiddentest-element/hiddentest-element.html">
