--- a/app/elements/login-element/login-element.html
+++ b/app/elements/login-element/login-element.html
@@ -89,7 +89,7 @@ location.reload();
 
             if (currentUser) {
                 (function(){
-                  alert('success'+currentUser);
+                  alert('success');
                   this.loggedIn = !this.loggedIn;
               })();
           } else {
