--- a/app/dozent.html
+++ b/app/dozent.html
@@ -100,7 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <!-- Toolbar icons -->
           <paper-icon-button icon="refresh" onclick="javascript:location.reload();"></paper-icon-button>
-          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut();location.reload();" ></paper-icon-button>
+          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut(); document.location.href = "/index.html";" ></paper-icon-button>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
