User Routing working

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- will be replaced with elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endreplace-->
-
+     <script src="scripts/logIn.js"></script>
 </head>
 
 <body unresolved class="fullbleed layout vertical">
