Create docent groundwork

--- a/app/admin.html
+++ b/app/admin.html
@@ -184,12 +184,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </section>
 
             <section data-route="a-add-docent">
-              <paper-material elevation="1">
-                <h2 class="paper-font-display2">
-                User:<span>{{params.name}}</span>
-                </h2>
-                <div>This is <span>{{params.name}}</span>'s section</div>
-              </paper-material>
+            <create-docent></create-docent>
             </section>
 
             <section data-route="a-manage-docent">
