--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,3 +41,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="signup-element/signup-element.html">
 <link rel="import" href="login-element/login-element.html">
 <link rel="import" href="user-element/user-element.html">
+<link rel="import" href="create-docent/create-docent.html">
