small theme adjustment

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -19,11 +19,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    for further information on custom CSS properties.
    */
 
-  /* Application theme */
+  /* Application theme 303F9F*/
 
   :root {
     --dark-primary-color: #303F9F;
-    --default-primary-color: #3F51B5;
+    --default-primary-color: #483d8b;
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff; /*text/icons*/
     --accent-color: #FF4081;
