--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -27,6 +27,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 
+
+<!-- Date Picker -->
+
+<link rel="import" href="../bower_components/paper-date-picker/paper-date-picker.html">
+
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
@@ -42,3 +47,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="login-element/login-element.html">
 <link rel="import" href="user-element/user-element.html">
 <link rel="import" href="create-docent/create-docent.html">
+<link rel="import" href="create-appointment/create-appointment.html">
