--- a/app/admin.html
+++ b/app/admin.html
@@ -190,7 +190,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="a-manage-docent">
               <paper-material elevation="1">
-                <create-appointment></create-appointment>
+                <create-time></create-time>
               </paper-material>
             </section>
 
