--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -26,6 +26,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+
+
+
 
 
 <!-- Date Picker -->
@@ -48,3 +52,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="user-element/user-element.html">
 <link rel="import" href="create-docent/create-docent.html">
 <link rel="import" href="create-appointment/create-appointment.html">
+<link rel="import" href="create-time/create-time.html">
