--- a/app/admin.html
+++ b/app/admin.html
@@ -180,7 +180,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <section data-route="a-overview-docent">
               <paper-material elevation="1">
                 <h2 class="paper-font-display2">Registrierte Benutzer</h2>
-                <user-element></user-element>
+                <docent-list></docent-list>
               </paper-material>
             </section>
 
@@ -191,7 +191,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <section data-route="a-manage-docent">
 
                 <create-time></create-time>
-            
+
             </section>
 
 
