--- a/app/elements/create-docent/create-docent.html
+++ b/app/elements/create-docent/create-docent.html
@@ -81,7 +81,7 @@ margin-right: auto;
 			<div class="spacer"></div>
 	<paper-item>
 	  <paper-item-body three-line class="paper-item-body-0">
-      <div><span>{{computeFullName(first, last)}}</span></div>
+      <div><span>{{computeFullName(firstName, lastName)}}</span></div>
 	    <div secondary>{{room}}</div>
       <div secondary>{{computeSubjects(subject1,subject2,subject3)}}</div>
     </paper-item-body>
