--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -52,4 +52,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="user-element/user-element.html">
 <link rel="import" href="create-docent/create-docent.html">
 <link rel="import" href="create-appointment/create-appointment.html">
-<link rel="import" href="create-time/create-time.html">
+<link rel="import" href="create-time/create-time.html"><link rel="import" href="docent-list/docent-list.html">
