TimeList wird vollständig erstellt

--- a/app/admin.html
+++ b/app/admin.html
@@ -147,8 +147,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="a-home">
               <paper-material elevation="1">
-
-
+                <my-greeting></my-greetings>
+                  
 
               </paper-material>
           <div class="teacherRole">
@@ -188,7 +188,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <create-docent></create-docent>
             </section>
 
-            <section data-route="a-manage-docent">
+            <section data-route="a-manage-appointments">
 
                 <create-time></create-time>
 
@@ -223,6 +223,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
+          <script src="scripts/hour.js"></script>
   <!-- endbuild-->
 </body>
 
