--- a/app/elements/create-time/create-time.html
+++ b/app/elements/create-time/create-time.html
@@ -184,6 +184,85 @@ paper-material{
 
 
       },
+      handleTimeClick:function(){
+            
+            var startHour,endHour,startMinute,endMinute, timeDiffer;
+
+            startMinute=$('#mins').html()*1; 
+            endMinute=$('#mine').html()*1; 
+
+            if($('#ps').html()==='PM' && $('#hs').html()*1!=12*1 && $('#pe').html()==='PM'){
+                 startHour = $('#hs').html()*1+12*1;  //*1 damit JS castet <->Quick n DIrty ansatz. Unebdingt ausbessern!!!!
+                 endHour =  $('#he').html()*1+12*1;    
+
+            }else if($('#ps').html()==='AM' && $('#pe').html()==='AM'){ 
+                 startHour=$('#hs').html()*1;
+                 endHour=$('#he').html()*1;
+
+                 if(startHour===12){
+                      startHour=0;
+                  }
+
+                 if(endHour===12){
+                      endHour=0;
+                  }
+            }
+
+            if($('#ps').html()==='PM' && $('#hs').html()*1===12*1 && $('#pe').html()==='PM'){
+                 startHour = $('#hs').html()*1;  //*1 damit JS castet <->Quick n DIrty ansatz. Unebdingt ausbessern!!!!
+                 endHour =  $('#he').html()*1+12*1; 
+            }   
+
+            if($('#pe').html()==='PM' && $('#ps').html()==='AM'){
+                 //*1 damit JS castet <->Quick n DIrty ansatz. Unebdingt ausbessern!!!!
+                 endHour =  $('#he').html()*1+12*1;    
+                 startHour=$('#hs').html()*1;
+                 if(startHour===12){
+                      startHour=0;
+                  }
+            }
+
+            if(endHour<=startHour ){
+                 if(endMinute<=startMinute){
+                    alert("die Zeitangaben scheinen nicht korrekt zu sein");
+                         }
+            }
+      //Vorläufige Erstellung der Zeiten
+
+              timeDiffer= 60*1-startMinute+60*(endHour-startHour-1)+endMinute;
+              var dur =  $('[name="duration"]').val()*1;  //Duration Time
+              var Break = $('[name="break"]').val()*1;    // Break Time
+              var partTime=  dur + Break;                  
+              var Array1= new Array(parseInt(timeDiffer/partTime));  
+
+            if(dur<9*1){
+                var t1= new Hour("00:0"+dur.toString());
+            }
+            if(dur>9*1){
+                  var t1= new Hour("00:"+dur.toString());
+            }
+            if(Break<9*1){
+                var t2= new Hour("00:0"+Break.toString());
+            }
+            if(Break>9*1){
+                  var t2= new Hour("00:"+Break.toString());
+            }
+            if(startMinute<9*1){
+                var start= new Hour(startHour + ":0" + startMinute);
+            }
+            if(startMinute>9*1){
+                var start= new Hour(startHour + ":" + startMinute);
+            }
+            var part= t1.add(t2);
+
+
+            for (var i = 0; i<Array1.length;i++){
+                Array1[i]= start.toString()+" - " + (start.add(t1)).toString();
+                start=start.add(part);
+                console.log( Array1[i]);
+            }
+          
+        },
         handleStartClick: function(){
             this.$.startDialog.toggle();
         },
