--- a/app/elements/signup-element/signup-element.html
+++ b/app/elements/signup-element/signup-element.html
@@ -139,6 +139,7 @@ margin-right: auto;
         password = $('[name="create-password"]').val(),
         firstName = $('[name="first"]').val(),
         lastName = $('[name="last"]').val();
+        
 
         if(
           email === '' ||
@@ -151,10 +152,10 @@ margin-right: auto;
 
         }else{
           var userRandom = Math.floor((Math.random() * 1000) + 1);
-
-          username = firstName.toLowerCase()
-                    + userRandom
-                    + lastName.toLowerCase();
+            username=email;
+          //username = firstName.toLowerCase()
+        //            + userRandom
+        //            + lastName.toLowerCase();
           var user = new Parse.User();
 
             user.set("username", username);
@@ -162,6 +163,7 @@ margin-right: auto;
             user.set("email", email);
             user.set("firstName", firstName);
             user.set("lastName", lastName);
+            user.set("isTeacher", true);
 
             user.signUp(null, {
             success: function(user) {
