--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -54,8 +54,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="create-docent/create-docent.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="create-appointment/create-appointment.html">
-<<<<<<< HEAD
-<link rel="import" href="create-time/create-time.html"><link rel="import" href="docent-list/docent-list.html">
-=======
+
+<link rel="import" href="docent-list/docent-list.html">
+<link rel="import" href="docent-list-user/docent-list-user.html">
 <link rel="import" href="create-time/create-time.html"><link rel="import" href="create-timeslots/create-timeslots.html">
->>>>>>> 91dc20d033d1236408c8f6f93958de94d00a5af8
+<link rel="import" href="times-list/times-list.html">
+<link rel="import" href="appointment-list-user/appointment-list-user.html">
