--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -60,3 +60,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="create-time/create-time.html"><link rel="import" href="create-timeslots/create-timeslots.html">
 <link rel="import" href="times-list/times-list.html">
 <link rel="import" href="appointment-list-user/appointment-list-user.html">
+<link rel="import" href="create-room/create-room.html">
+<link rel="import" href="page-user/page-user.html">
+<link rel="import" href="page-admin/page-admin.html">
+<link rel="import" href="page-docent/page-docent.html">
+<link rel="import" href="page-importer/page-importer.html">
+<link rel="import" href="single-docent/single-docent.html">
+<link rel="import" href="fetch-docent-test/fetch-docent-test.html">
