--- a/app/elements/fetch-docent-test/fetch-docent-test.html
+++ b/app/elements/fetch-docent-test/fetch-docent-test.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
 
-<dom-module id="docent-list-user">
+<dom-module id="fetch-docent-test">
   <style>
     :host {
       display: block;
@@ -18,50 +18,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </style>
   <template>
 
-    <div id="dlist">
-      <template is="dom-repeat" items="{{docentList}}">
-
-        <paper-item on-tap="docentClick">
-          <div>
-            <iron-image id="avatar" sizing="cover" style="width:50px; height:50px" ; fade src="{{item.picture}}"></iron-image>
-          </div>
-          <paper-item-body three-line class="paper-item-body-0">
-            <div>
-              <span>{{item.lastName}}</span>
-              <span>{{item.firstName}}</span>
-            </div>
-            <div secondary>Email:
-              <span>{{item.email}}</span>
-            </div>
-            <div secondary>Room:
-              <span>{{item.room}}</span>
-            </div>
-          </paper-item-body>
-
-          </paper-icon-item>
-
-
-      </template>
-    </div>
-
-    <paper-dialog id="timeDialog" class=" paper-date-picker-dialog">
-
-
-      <times-list></times-list>
-
-
-      <div class="buttons">
-        <paper-button flat dialog-dismiss>Cancel</paper-button>
-        <paper-button flat dialog-confirm on-click="setRooms">OK</paper-button>
-      </div>
-    </paper-dialog>
-
   </template>
   <script>
-    (function() {
-      Polymer({
-        is: "docent-list-user",
+  (function() {
+    Polymer({
+      is: 'fetch-docent-test',
 
+      properties: {
+
+        docentList:{
+          type: Object,
+          notify:true
+        }
+
+      },
         ready: function() {
           var self = this;
           var query = new Parse.Query(Parse.User);
@@ -70,7 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           query.find().then(function(results) {
             var List = [];
-            console.log("blablub");
+
             for (i in results) {
               var item = {};
               var object = results[i];
@@ -85,21 +55,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               item['picture'] = picURL;
 
               List.push(item);
-              console.log(item);
+
 
             }
-            self.docentList = List;
-
+             self.docentList = List;
+                console.log(self.docentList);
           });
 
-        },
-        docentClick: function(e) {
-          var teacher = e.model;
-          this.$.timeDialog.toggle();
-
-          console.log(teacher.get('item.firstName'));
-        }
-      });
-    })();
+      }
+    });
+  })();
   </script>
 </dom-module>
