--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <html lang="">
+
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
@@ -54,83 +55,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- will be replaced with elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endreplace-->
-     <script src="scripts/logIn.js"></script>
+  <script src="scripts/logIn.js"></script>
 </head>
 
 <body unresolved class="fullbleed layout vertical">
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
 
-
-      <!-- Drawer Scroll Header Panel -->
-
-      <!-- Main Area -->
-      <paper-scroll-header-panel main condenses keep-condensed-header>
-
-        <!-- Main Toolbar -->
-        <paper-toolbar id="mainToolbar" class="tall">
-
-          <span class="flex"></span>
-
-          <!-- Toolbar icons -->
-
-
-          <!-- Application name -->
-          <div class="middle middle-container center horizontal layout">
-            <div class="app-name">Sprechstundenverwaltung</div>
-          </div>
-
-          <!-- Application sub title -->
-          <div class="bottom bottom-container center horizontal layout">
-            <div class="bottom-title paper-font-subhead">Alle Termine auf einen Blick</div>
-          </div>
-
-        </paper-toolbar>
-
-        <!-- Main Content -->
-        <div class="content">
-
-
-            <section>
-
-
-            <login-element id="login-element"></login-element>
-
-          <div id="signup" class="hidden">
-            <signup-element></signup-element>
-          </div>
-        </div>
-      </paper-scroll-header-panel>
-
-
-    <!-- Uncomment next block to enable Service Worker support (1/2) -->
-    <!--
-    <paper-toast id="caching-complete"
-                 duration="6000"
-                 text="Caching complete! This app will work offline.">
-    </paper-toast>
-
-    <platinum-sw-register auto-register
-                          clients-claim
-                          skip-waiting
-                          on-service-worker-installed="displayInstalledToast">
-      <platinum-sw-cache default-cache-strategy="networkFirst"
-                         precache-file="precache.json">
-      </platinum-sw-cache>
-    </platinum-sw-register>
-    -->
+    <page-importer></page-importer>
 
   </template>
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
   <script>
-  $("#registerButton").click(function(e){
-    alert("ALERT!");
+    $("#registerButton").click(function(e) {
+      alert("ALERT!");
       $('#login-element').hide();
       $('#signup').removeClass('hidden').slideDown();
-  });
-
+    });
   </script>
 
 </body>
